<resources>
    <string name="app_name">GroceryShop</string>

    <string name="button">Button</string>
    <string name="enter_name">Enter Name</string>
    <string name="marketname">email</string>
    <string name="phone">phone</string>
    <string name="date">date</string>
    <string name="title_activity_ownerproductlist">ownerproductlist</string>
    <string name="orders_list">Orders List</string>
    <string name="quantity">Qty</string>
    <string name="amount">Amount</string>
    <string name="products">Products</string>
    <string name="measure">Measure</string>
    <string name="googleApiKey">AIzaSyBY13pIsnay-eP1f7oAnEryRHGoApHM6Ug</string>
    <string name="place_order_to_your_monthly_list">Place Order To Your Monthly List</string>
    <string name="place_freshorder">Place FreshOrder</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_monthly_list">Add To Monthly List</string>
    <string name="your_monthly_grocery_list">Your Monthly Grocery List</string>
    <string-array name="spinner_quanity_measure">
        <item>Select Quantity Type</item>
        <item>KG</item>
        <item>Gram</item>

    </string-array>
</resources>
