<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ownercontent.OrderSummaryListFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/orders_list"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/products"
            android:textAlignment="center"
            android:textColor="@color/colorAccentPurple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/colorAccentPurple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textAlignment="center"
            android:textColor="@color/colorAccentPurple"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/order_display_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/grand_total_text_ownerside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/grand_total_text_ownerside"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="GrandTotal"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/grand_total_ownerside"
            app:layout_constraintTop_toBottomOf="@+id/order_display_recycle" />

        <TextView
            android:id="@+id/grand_total_ownerside"
            android:layout_width="310dp"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toEndOf="@id/grand_total_text_ownerside"
            app:layout_constraintTop_toBottomOf="@+id/order_display_recycle"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm Delivered"
            android:id="@+id/confirm_delivered_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grand_total_text_ownerside" />



    </android.support.constraint.ConstraintLayout>


</LinearLayout>